fix: Modify alignment of contents at Customer page

--- a/p3-react-app/src/components/TrackingForm.css
+++ b/p3-react-app/src/components/TrackingForm.css
@@ -1,4 +1,16 @@
 .TrackingForm-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+}
+
+.TrackingForm-container form {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  padding-top: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border: 1px solid #1025a1;
+  border-top: 0;
 }
