--- a/p3-react-app/src/pages/Customer.css
+++ b/p3-react-app/src/pages/Customer.css
@@ -14,9 +14,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .Customer-content-tab {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -31,24 +33,10 @@
   text-align: center;
 }
 
-a {
-  text-align: center;
-}
-
-form {
-  padding: 20px;
-  padding-top: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border: 1px solid #1025a1;
-  border-top: 0;
-}
-
 .Customer-content-tab-inactive {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom: 1px solid #1025a1;
-
 }
 
 .Customer-content-tab-active {
